--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "gh-pages": "4.0.0"
+  },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
